force-app/main/default/objects/custom_create228__c/custom_create228__c.object-meta.xml
<CustomObject>
    <label>Custom created object228</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects228</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>