force-app/main/default/objects/custom_create228__c/fields/custom_create_228field505__c.field-meta.xml
<CustomField>
    <fullName>custom_create_228field505__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 228field505</label>
    <type>Checkbox</type>
</CustomField>